# wasm-bindgen-with-tsify

./: .gitignore  README.md  package-lock.json  package.json  vitest.config.ts
with_tsify/: Cargo.toml
with_tsify/pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
with_tsify/src/: lib.rs
with_tsify/tests/: index.test.ts
without_tsify/: Cargo.toml
without_tsify/pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts
without_tsify/src/: lib.rs
without_tsify/tests/: index.test.ts
